.metadata/.plugins/org.eclipse.cdt.ui/MnistAi.build.log
01:12:40 **** Incremental Build of configuration Debug for project MnistAi ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../X-CUBE-AI/App -I../X-CUBE-AI -I../Middlewares/ST/AI/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:117:23: error: 'huart' undeclared (first use in this function); did you mean 'huart1'?
  117 |    HAL_UART_Transmit(&huart, "a",7,100);
      |                       ^~~~~
      |                       huart1
../Core/Src/main.c:117:23: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:117:30: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  117 |    HAL_UART_Transmit(&huart, "a",7,100);
      |                              ^~~
      |                              |
      |                              char *
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:407,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:722:79: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'char *'
  722 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~~~~~~~^~~~~
make: *** [Core/Src/subdir.mk:31: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

01:12:41 Build Failed. 2 errors, 1 warnings. (took 496ms)

